--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script id="challenge">
     // 👉 CHALLENGE 1
     function profileActivation(profile, reason) {
-
+      test
     }
 
     // 👉 CHALLENGE 2
