--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           break
         }
       }
-      return throws
+      return throws  //lowest = 9!
     }
 
     // 🧪 DO NOT make any changes below this line ===================
